# RationalVueGUI

./: CMakeLists.txt  README.md  build.sh  default.ini
GUI/: dockwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  untitled13.pro
GUI/DataZoneLeft/: dataZoneIcon.qrc  dataZoneLeft.cpp  dataZoneLeft.h  dataZoneLeft.ui  dataZoneLeftIcon.qrc
GUI/DataZoneRight/: dataZoneRight.cpp  dataZoneRight.h  datazoneright.ui  res.qrc
GUI/DataZoneRight/css/: qss.qss  styleSheet.css
GUI/DimensionReportZone/: dimensionReportZone.cpp  dimensionReportZone.h  dimensionReportZone.ui
GUI/GraphiceZone/: graphiceZone.cpp  graphiceZone.h  graphiceZone.ui
GUI/LightControl/: controlStyle.cpp  lightCircle.cpp  lightCircle.h  lightControl.cpp  lightControl.h  lightControl.ui  ui_lightControl.h
GUI/MachineStatusZone/: MachineStatusCoordinate.cpp  MachineStatusCoordinate.h  MachineStatusCoordinate.ui  machineControl.cpp  machineControl.h  machineControl.ui  machineCoordinate.cpp  machineCoordinate.h  machineCoordinate.ui  machineStatus.cpp  machineStatus.h  machineStatus.ui  machineStatusZone.cpp  machineStatusZone.h  machineStatusZone.h.autosave  machineStatusZone.ui  machine_status_area.pro  numberShowWidget.cpp  numberShowWidget.h  numberShowWidget.ui  res.qrc
GUI/MainWindow/: mainwindow.cpp  mainwindow.h
GUI/OperationZoneLeft/: operationZoneLeft.cpp  operationZoneLeft.h  operationZoneLeft.ui
GUI/OperationZoneRight/: ConstructOperationZone.pro  OperationZoneRight.cpp  OperationZoneRight.ui  OperationZoneRightQss.cpp  OperationZoneRightQss.h  build.md  cconstructcenterofgravity.cpp  cconstructcenterofgravity.h  cconstructmiddlefeature.cpp  cconstructmiddlefeature.h  cconstructnomactbestfitwidget.cpp  cconstructnomactbestfitwidget.cpp.autosave  cconstructnomactbestfitwidget.h  constructcenterofgravity.cpp  constructcenterofgravity.h  constructmiddlefeature.cpp  constructmiddlefeature.h  constructnomactbestfitwidget.cpp  constructnomactbestfitwidget.h  crvfigureset.cpp  crvfigureset.h  demo.qss  images.qrc  main.cpp  myqss.cpp  myqss.h  operationZoneRight.cpp  operationZoneRight.h  operationzoneright.cpp  operationzoneright.ui  operationzonerightqss.cpp  operationzonerightqss.h  optzonerightresources.qrc  readme.md  rvfigureset.cpp  rvfigureset.h
GUI/PaintZone/: controlStyle.cpp  controlStyle.h  icons.qrc  lightCircle.cpp  lightCircle.h  lightControl.pro.user.4.8-pre1  paintZone.cpp  paintZone.h  paintZone.pro  paintZone.ui
GUI/StatusBarZone/: res.qrc  statusBarZone.cpp  statusBarZone.h
